[package]
name = "mlua"
version = "0.2.2"
authors = ["Aleksandr Orlenko <zxteam@pm.me>", "kyren <catherine@chucklefish.org>"]
edition = "2018"
repository = "https://github.com/khvzak/mlua"
documentation = "https://docs.rs/mlua"
readme = "README.md"
keywords = ["lua", "luajit"]
categories = ["api-bindings"]
license = "MIT"
links = "lua"
build = "build/main.rs"
description = """
High level bindings to Lua 5.1/5.2/5.3 (including LuaJIT)
with support of writing native lua modules in Rust.
"""

[badges]
# github-actions = { repository = "khvzak/mlua", workflow = "CI" }

[workspace]
members = [
    "mlua_derive",
]

[features]
default = ["lua53"]
lua53 = ["async"]
lua52 = ["async"]
lua51 = []
luajit = []
vendored = ["lua-src", "luajit-src"]
async = ["futures-task", "futures-util"]

[dependencies]
bstr = { version = "0.2", features = ["std"], default_features = false }
futures-core = { version = "0.3.4" }
futures-task = { version = "0.3.4", optional = true }
futures-util = { version = "0.3.4", optional = true }
num-traits = { version = "0.2.11" }

[build-dependencies]
cc = { version = "1.0" }
pkg-config = { version = "0.3.11" }
lua-src = { version = "535.0.1", optional = true }
luajit-src = { version = "210.0.0", optional = true }

[dev-dependencies]
rustyline = "6.0"
criterion = "0.3"
trybuild = "1.0"
tokio = { version = "0.2.11", features = ["full"] }
futures-executor = "0.3.4"
futures-util = "0.3.4"
futures-timer = "3.0"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "async_tcp_server"
required-features = ["async"]
